test/compile-fail/resolution/use/super/expected.txt
error: unresolved item `super`
 --> top.rhdl:2:7
  |
2 | use a::super;
  |        ^^^^^ no `super` item in `a`
